--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -134,12 +134,19 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
                     <ul>
-                        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
+                        <li><a href="../posto/unidade.html"><span class="lbl">Unidade</span></a></li>
                         <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
-                        <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
-                        <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
-                        <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
-                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
+                        <li class="with-sub">
+                            <span class="lbl">Grupos</span></a>
+                            <ul>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a>
+                                </li>
+                                <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../academico/cursos.html"><span class="lbl">Curso</span></a></li>
+                        <li><a href="../academico/niveis.html"><span class="lbl">Nível</span></a></li>
+                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviço</span></a></li>
                     </ul>
                 </li>
                 <li class="green with-sub">
@@ -184,34 +191,6 @@
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
-                    </ul>
-                </li>
-                <li class="grey with-sub">
-	            <span>
-	                <span class="font-icon font-icon-burger"></span>
-	                <span class="lbl">Nested Menu</span>
-	            </span>
-                    <ul>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li class="with-sub">
-	                    <span>
-	                        <span class="lbl">Level 2</span>
-	                    </span>
-                            <ul>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li class="with-sub">
-	                            <span>
-	                                <span class="lbl">Level 3</span>
-	                            </span>
-                                    <ul>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </li>
             </ul>
@@ -362,7 +341,7 @@
                                             </div>
                                             <div class="col-sm-3">
                                                 <p class="mt-sm">
-                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
+                                                    <a class="semibold" data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
                                                         <i class="fa fa-search-plus" aria-hidden="true"></i> Busca avançada</a>
                                                 </p>
                                             </div>
@@ -651,15 +630,19 @@
                                                                     <th>Data fim</th>
                                                                     <th>Situação</th>
                                                                     <th>Valor</th>
+                                                                    <th>Observações</th>
                                                                     <th class="text-right">Ações</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr class="table-active-next" data-toggle="tooltip" data-placement="top" title="Próximo valor vigente">
+                                                                <tr class="table-active-next" data-toggle="tooltip" data-placement="bottom" title="Próximo valor vigente">
                                                                     <td>00/00/0000</td>
                                                                     <td>00/00/0000</td>
                                                                     <td>Ativo</td>
                                                                     <td>R$450,00</td>
+                                                                    <td>
+                                                                        <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Reajustado de acordo...</a>
+                                                                    </td>
                                                                     <td class="text-right">
                                                                         <div class="btn-group btn-group-sm pull-right">
                                                                             <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações
@@ -672,11 +655,14 @@
                                                                         </div>
                                                                     </td>
                                                                 </tr>
-                                                                <tr class="table-active-visual" data-toggle="tooltip" data-placement="top" title="Valor vigente">
+                                                                <tr class="table-active-visual" data-toggle="tooltip" data-placement="bottom" title="Valor vigente">
                                                                     <td>00/00/0000</td>
                                                                     <td>00/00/0000</td>
                                                                     <td>Ativo</td>
                                                                     <td>R$450,00</td>
+                                                                    <td>
+                                                                        <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Reajustado de acordo...</a>
+                                                                    </td>
                                                                     <td class="text-right">
                                                                         <div class="btn-group btn-group-sm pull-right">
                                                                             <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações
@@ -689,11 +675,14 @@
                                                                         </div>
                                                                     </td>
                                                                 </tr>
-                                                                <tr class="table-inactive" data-toggle="tooltip" data-placement="top" title="Valor inativo">
+                                                                <tr class="table-inactive" data-toggle="tooltip" data-placement="bottom" title="Valor inativo">
                                                                     <td>00/00/0000</td>
                                                                     <td>00/00/0000</td>
                                                                     <td>Ativo</td>
                                                                     <td>R$450,00</td>
+                                                                    <td>
+                                                                        <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Reajustado de acordo...</a>
+                                                                    </td>
                                                                     <td class="text-right"></td>
                                                                 </tr>
                                                             </tbody>
@@ -828,26 +817,36 @@
                                                         <th>Data fim</th>
                                                         <th>Situação</th>
                                                         <th>Valor</th>
+                                                        <th>Observações</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr class="table-active-next" data-toggle="tooltip" data-placement="top" title="Próximo valor vigente">
+                                                    <tr class="table-active-next" data-toggle="tooltip" data-placement="bottom" title="Próximo valor vigente">
                                                         <td>00/00/0000</td>
                                                         <td>00/00/0000</td>
                                                         <td>Ativo</td>
                                                         <td>R$450,00</td>
+                                                        <td>
+                                                            <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Reajustado...</a>
+                                                        </td>
                                                     </tr>
-                                                    <tr class="table-active-visual" data-toggle="tooltip" data-placement="top" title="Valor vigente">
+                                                    <tr class="table-active-visual" data-toggle="tooltip" data-placement="bottom" title="Valor vigente">
                                                         <td>00/00/0000</td>
                                                         <td>00/00/0000</td>
                                                         <td>Ativo</td>
                                                         <td>R$450,00</td>
+                                                        <td>
+                                                            <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Atualizado de...</a>
+                                                        </td>
                                                     </tr>
-                                                    <tr class="table-inactive" data-toggle="tooltip" data-placement="top" title="Valor inativo">
+                                                    <tr class="table-inactive" data-toggle="tooltip" data-placement="bottom" title="Valor inativo">
                                                         <td>00/00/0000</td>
                                                         <td>00/00/0000</td>
                                                         <td>Ativo</td>
                                                         <td>R$450,00</td>
+                                                        <td>
+                                                            <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">Reajustado para...</a>
+                                                        </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -1046,8 +1045,8 @@
         <script src="../../js/lib/datatables-net/datatables.min.js"></script>
         <script src="../../js/start-datatables.js"></script>
 
-        <script src="../../js/app.js"></script>
         <script src="../../js/plugins.js"></script>
+        <script src="../../js/app.js"></script>
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
@@ -1058,17 +1057,15 @@
 
         <script src="../../js/lib/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
         <script type="text/javascript">
-            $(function () {
-                $('#datetimepicker-inicial, #datetimepicker-final').datetimepicker({
-                    locale: 'pt-br',
-                    format: "DD/MM/YYYY"
-                });
+            $('#datetimepicker-inicial, #datetimepicker-final').datetimepicker({
+                locale: 'pt-br',
+                format: "DD/MM/YYYY"
+            });
+            $('[data-toggle="popover"]').popover();
+            $('.popover-dismiss').popover({
+                trigger: 'focus'
             });
         </script>
-
-
-        <!-- script par carregar includes - Jogar fora -->
-        <script src="../../js/load-includes.js"></script>
 
     </body>
 </html>
