--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -133,12 +133,18 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
                     <ul>
-                        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
+                        <li><a href="../posto/unidade.html"><span class="lbl">Unidade</span></a></li>
                         <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
-                        <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
-                        <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
-                        <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
-                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
+                        <li class="with-sub">
+                            <span class="lbl">Grupos</span></a>
+                            <ul>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a></li>
+                                <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../academico/cursos.html"><span class="lbl">Curso</span></a></li>
+                        <li><a href="../academico/niveis.html"><span class="lbl">Nível</span></a></li>
+                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviço</span></a></li>
                     </ul>
                 </li>
                 <li class="green with-sub">
@@ -183,34 +189,6 @@
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
-                    </ul>
-                </li>
-                <li class="grey with-sub">
-	            <span>
-	                <span class="font-icon font-icon-burger"></span>
-	                <span class="lbl">Nested Menu</span>
-	            </span>
-                    <ul>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li class="with-sub">
-	                    <span>
-	                        <span class="lbl">Level 2</span>
-	                    </span>
-                            <ul>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li class="with-sub">
-	                            <span>
-	                                <span class="lbl">Level 3</span>
-	                            </span>
-                                    <ul>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </li>
             </ul>
@@ -297,7 +275,7 @@
                                             </div>
                                             <div class="col-sm-3">
                                                 <p class="mt-sm">
-                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
+                                                    <a class="semibold" data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
                                                         <i class="fa fa-search-plus" aria-hidden="true"></i> Busca avançada</a>
                                                 </p>
                                             </div>
@@ -861,9 +839,6 @@
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/input-mask/input-mask-init.js"></script>
-
-        <!-- script par carregar includes - Jogar fora -->
-        <script src="../../js/load-includes.js"></script>
 
     </body>
 </html>
