--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -133,12 +133,18 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
                     <ul>
-                        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
+                        <li><a href="../posto/unidade.html"><span class="lbl">Unidade</span></a></li>
                         <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
-                        <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
-                        <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
-                        <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
-                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
+                        <li class="with-sub">
+                            <span class="lbl">Grupos</span></a>
+                            <ul>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a></li>
+                                <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../academico/cursos.html"><span class="lbl">Curso</span></a></li>
+                        <li><a href="../academico/niveis.html"><span class="lbl">Nível</span></a></li>
+                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviço</span></a></li>
                     </ul>
                 </li>
                 <li class="green with-sub">
@@ -183,34 +189,6 @@
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
-                    </ul>
-                </li>
-                <li class="grey with-sub">
-	            <span>
-	                <span class="font-icon font-icon-burger"></span>
-	                <span class="lbl">Nested Menu</span>
-	            </span>
-                    <ul>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li class="with-sub">
-	                    <span>
-	                        <span class="lbl">Level 2</span>
-	                    </span>
-                            <ul>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li class="with-sub">
-	                            <span>
-	                                <span class="lbl">Level 3</span>
-	                            </span>
-                                    <ul>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </li>
             </ul>
@@ -387,7 +365,7 @@
                                                 </div>
                                                 <div class="col-sm-3">
                                                     <p class="mt-sm">
-                                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
+                                                        <a class="semibold" data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
                                                             <i class="fa fa-search-plus" aria-hidden="true"></i> Busca avançada</a>
                                                     </p>
                                                 </div>
@@ -1053,21 +1031,27 @@
                             </header>
                             <div class="card-block">
                                 <div class="row">
-                                    <div class="col-md-2">
+                                    <div class="col-md-4">
                                         <label class="form-label semibold">Situação</label>
                                         <p class="text-success">
                                             <strong><i class="fa fa-check" aria-hidden="true"></i> Ativo</strong></p>
                                     </div>
                                     <div class="col-md-4">
-                                        <label class="form-label semibold">Quantidade de unidades avaliativas</label>
-                                        <p>0000</p>
+                                        <label class="form-label semibold">Certificado</label>
+                                        <p>Sim</p>
                                     </div>
                                     <div class="col-md-4">
                                         <label class="form-label semibold">Curso(s)</label>
                                         <p>TEENS / Jovens e adultos</p>
                                     </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label semibold">Certificado</label>
+                                </div>
+                                <div class="row mt-md">
+                                    <div class="col-sm-6">
+                                        <label class="form-label semibold">Quantidade de unidades avaliativas</label>
+                                        <p>0000</p>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label class="form-label semibold">Material didático obrigatório</label>
                                         <p>Sim</p>
                                     </div>
                                 </div>
@@ -1188,9 +1172,6 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
-
-        <!-- script par carregar includes - Jogar fora -->
-        <script src="../../js/load-includes.js"></script>
 
     </body>
 </html>
