--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -133,12 +133,18 @@
 	                <span class="lbl">Acadêmico</span>
 	            </span>
                     <ul>
-                        <li><a href="../posto/unidade.html"><span class="lbl">Unidades</span></a></li>
+                        <li><a href="../posto/unidade.html"><span class="lbl">Unidade</span></a></li>
                         <li><a href="../posto/posto.html"><span class="lbl">Posto avançado</span></a></li>
-                        <li><a href="../academico/grupos.html" class="active"><span class="lbl">Grupos</span></a></li>
-                        <li><a href="../academico/cursos.html"><span class="lbl">Cursos</span></a></li>
-                        <li><a href="../academico/niveis.html"><span class="lbl">Níveis</span></a></li>
-                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviços</span></a></li>
+                        <li class="with-sub">
+                            <span class="lbl">Grupos</span></a>
+                            <ul>
+                                <li><a href="../academico/grupos.html" class="active"><span class="lbl">Curso</span></a></li>
+                                <li><a href="../academico/grupos.html"><span class="lbl">Serviço</span></a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../academico/cursos.html"><span class="lbl">Curso</span></a></li>
+                        <li><a href="../academico/niveis.html"><span class="lbl">Nível</span></a></li>
+                        <li><a href="../servicos/servicos.html"><span class="lbl">Serviço</span></a></li>
                     </ul>
                 </li>
                 <li class="green with-sub">
@@ -183,34 +189,6 @@
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
                         <li><a href="#"><span class="lbl">opção #</span></a></li>
-                    </ul>
-                </li>
-                <li class="grey with-sub">
-	            <span>
-	                <span class="font-icon font-icon-burger"></span>
-	                <span class="lbl">Nested Menu</span>
-	            </span>
-                    <ul>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li><a href="#"><span class="lbl">Level 1</span></a></li>
-                        <li class="with-sub">
-	                    <span>
-	                        <span class="lbl">Level 2</span>
-	                    </span>
-                            <ul>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li><a href="#"><span class="lbl">Level 2</span></a></li>
-                                <li class="with-sub">
-	                            <span>
-	                                <span class="lbl">Level 3</span>
-	                            </span>
-                                    <ul>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                        <li><a href="#"><span class="lbl">Level 3</span></a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </li>
             </ul>
@@ -358,7 +336,7 @@
                                             </div>
                                             <div class="col-sm-3">
                                                 <p class="mt-sm">
-                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
+                                                    <a class="semibold" data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true" aria-controls="collapseOne">
                                                         <i class="fa fa-search-plus" aria-hidden="true"></i> Busca avançada</a>
                                                 </p>
                                             </div>
@@ -741,7 +719,7 @@
                                                     <div class="tbl-row">
                                                         <div class="tbl-cell tbl-cell-title">
                                                             <h5 class="semibold">
-                                                                <i class="fa fa-phone" aria-hidden="true"></i> Telefones
+                                                                <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Lista de contatos
                                                             </h5>
                                                         </div>
                                                         <div class="tbl-cell tbl-cell-action-bordered">
@@ -753,20 +731,24 @@
                                                         </div>
                                                     </div>
                                                 </header>
-                                                <div class="card-block">
+                                                <div class="p-0">
                                                     <div class="table-responsive">
-                                                        <table class="table table-hover">
+                                                        <table class="table table-hover table-box-typical">
                                                             <thead>
                                                                 <tr>
-                                                                    <th>Nome</th>
-                                                                    <th>Telefone(s) / E-mail</th>
-                                                                    <th>Observações</th>
-                                                                    <th class="text-right">Ações</th>
+                                                                    <th class="text-center">Nome</th>
+                                                                    <th class="text-center">E-mail(s)</th>
+                                                                    <th class="text-center">Telefone(s)</th>
+                                                                    <th class="text-center">Observações</th>
+                                                                    <th class="text-center">Ações</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
                                                                 <tr>
                                                                     <td><p>Luan Almeida Barbosa</p></td>
+                                                                    <td>
+                                                                        luan.almeida@email.com.br
+                                                                    </td>
                                                                     <td>
                                                                         <ul class="chart-legend-list">
                                                                             <li>
@@ -778,13 +760,10 @@
                                                                                 (00) 0000-0000 - Outros
                                                                             </li>
                                                                         </ul>
-                                                                        <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                                                                     </td>
                                                                     <td>
-
-                                                                        <p>Observações:
-                                                                            <br>Gerente do posto, atendimento das 14h00 ás 22h00
-                                                                        </p></td>
+                                                                        <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."> Gerente do posto...</a>
+                                                                    </td>
                                                                     <td class="text-right">
                                                                         <div class="btn-group btn-group-sm pull-right">
                                                                             <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações
@@ -800,6 +779,9 @@
                                                                 <tr>
                                                                     <td><p>Iranyr Almeida Barbosa</p></td>
                                                                     <td>
+                                                                        luan.almeida@email.com.br
+                                                                    </td>
+                                                                    <td>
                                                                         <ul class="chart-legend-list">
                                                                             <li>
                                                                                 <div class="dot blue"></div>
@@ -810,13 +792,11 @@
                                                                                 (00) 0000-0000 - Outros
                                                                             </li>
                                                                         </ul>
-                                                                        <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                                                                     </td>
-                                                                    <td>
 
-                                                                        <p>Observações:
-                                                                            <br>Gerente do posto, atendimento das 14h00 ás 22h00
-                                                                        </p></td>
+                                                                    <td>
+                                                                        <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."> Gerente do posto...</a>
+                                                                    </td>
                                                                     <td class="text-right">
                                                                         <div class="btn-group btn-group-sm pull-right">
                                                                             <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações
@@ -1080,24 +1060,29 @@
                                         <div class="tbl-row">
                                             <div class="tbl-cell tbl-cell-title">
                                                 <h5 class="semibold">
-                                                    <i class="fa fa-phone" aria-hidden="true"></i> Telefones </h5>
+                                                    <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Lista de contatos
+                                                </h5>
                                             </div>
                                         </div>
                                     </header>
-                                    <div class="card-block">
+                                    <div class="p-0">
                                         <div class="table-responsive">
-                                            <table class="table table-hover">
+                                            <table class="table table-hover table-box-typical">
                                                 <thead>
                                                     <tr>
-                                                        <th>Nome</th>
-                                                        <th>Telefone(s) / E-mail</th>
-                                                        <th>Observações</th>
+                                                        <th class="text-center">Nome</th>
+                                                        <th class="text-center">E-mail(s)</th>
+                                                        <th class="text-center">Telefone(s)</th>
+                                                        <th class="text-center">Observações</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
                                                         <td><p>Luan Almeida Barbosa</p></td>
                                                         <td>
+                                                            luan.almeida@email.com.br
+                                                        </td>
+                                                        <td>
                                                             <ul class="chart-legend-list">
                                                                 <li>
                                                                     <div class="dot blue"></div>
@@ -1108,16 +1093,18 @@
                                                                     (00) 0000-0000 - Outros
                                                                 </li>
                                                             </ul>
-                                                            <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                                                         </td>
                                                         <td>
-                                                            <p>Observações:
-                                                                <br>Gerente do posto, atendimento das 14h00 ás 22h00</p>
+                                                            <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."> Gerente do posto...</a>
                                                         </td>
+
                                                     </tr>
                                                     <tr>
                                                         <td><p>Iranyr Almeida Barbosa</p></td>
                                                         <td>
+                                                            luan.almeida@email.com.br
+                                                        </td>
+                                                        <td>
                                                             <ul class="chart-legend-list">
                                                                 <li>
                                                                     <div class="dot blue"></div>
@@ -1128,11 +1115,10 @@
                                                                     (00) 0000-0000 - Outros
                                                                 </li>
                                                             </ul>
-                                                            <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                                                         </td>
+
                                                         <td>
-                                                            <p>Observações:
-                                                                <br>Gerente do posto, atendimento das 14h00 ás 22h00</p>
+                                                            <a tabindex="0" data-container="body" data-trigger="focus" title="Observações" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."> Gerente do posto...</a>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -1166,19 +1152,18 @@
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/input-mask/input-mask-init.js"></script>
 
-
         <script src="../../js/app.js"></script>
         <script src="../../js/plugins.js"></script>
-
-
-        <!-- script par carregar includes - Jogar fora -->
-        <script src="../../js/load-includes.js"></script>
-
 
         <script src="../../js/lib/bootstrap-maxlength/bootstrap-maxlength.js"></script>
         <script src="../../js/lib/bootstrap-maxlength/bootstrap-maxlength-init.js"></script>
 
-        <script></script>
+        <script type="text/javascript">
+            $('[data-toggle="popover"]').popover();
+            $('.popover-dismiss').popover({
+                trigger: 'focus'
+            });
+        </script>
 
     </body>
 </html>
